force-app/main/default/objects/Imoveis__c/Imoveis__c.object-meta.xml
<CustomObject>
    <description>Exibe informaçoes de imóveis</description>
    <label>Imóveis</label>
    <nameField>
        <displayFormat>IMO - {0000}</displayFormat>
        <label>Nome de Imoveis</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Imoveis</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>