force-app/main/default/objects/Imoveis__c/fields/Banheiro__c.field-meta.xml
<CustomField>
    <fullName>Banheiro__c</fullName>
    <inlineHelpText>Insira a quantidade de Banheiro</inlineHelpText>
    <label>Banheiro</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>