force-app/main/default/objects/Imoveis__c/fields/Cozinha__c.field-meta.xml
<CustomField>
    <fullName>Cozinha__c</fullName>
    <inlineHelpText>Insira a quantidade de Cozinha</inlineHelpText>
    <label>Cozinha</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>