force-app/main/default/objects/Imoveis__c/fields/Finalidade_do_Imovel__c.field-meta.xml
<CustomField>
    <fullName>Finalidade_do_Imovel__c</fullName>
    <inlineHelpText>Escolha o tipo da finalidade do imovel</inlineHelpText>
    <label>Finalidade do Imovel</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nenhum</fullName>
            </value>
            <value>
                <fullName>Residencial</fullName>
            </value>
            <value>
                <fullName>Comercial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>