force-app/main/default/objects/Imoveis__c/fields/Garagem__c.field-meta.xml
<CustomField>
    <fullName>Garagem__c</fullName>
    <inlineHelpText>Insira a quantidade de Garagem</inlineHelpText>
    <label>Garagem</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>