force-app/main/default/objects/Imoveis__c/fields/Mobiliado__c.field-meta.xml
<CustomField>
    <fullName>Mobiliado__c</fullName>
    <description>possui mobilia no imovel</description>
    <inlineHelpText>Escolha se o imovel é mobiliado</inlineHelpText>
    <label>Mobiliado</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Escolha</fullName>
                <default>true</default>
                <label>Escolha</label>
            </value>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>