force-app/main/default/objects/Imoveis__c/fields/Sala__c.field-meta.xml
<CustomField>
    <fullName>Sala__c</fullName>
    <inlineHelpText>Insira a quantidade de Salas</inlineHelpText>
    <label>Sala</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>