force-app/main/default/objects/Imoveis__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Imovel esta disponivel ou nao</description>
    <inlineHelpText>Escolha disponibilidade do imovel</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nenhum</fullName>
                <default>true</default>
                <label>Nenhum</label>
            </value>
            <value>
                <fullName>Disponivel</fullName>
            </value>
            <value>
                <fullName>Indisponivel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>