force-app/main/default/objects/Imoveis__c/fields/Tipos_Comerciais__c.field-meta.xml
<CustomField>
    <fullName>Tipos_Comerciais__c</fullName>
    <inlineHelpText>Escolha um tipo comercial para o imovel com finalidade comercial</inlineHelpText>
    <label>Tipos Comerciais</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Finalidade_do_Imovel__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nenhum</fullName>
            </value>
            <value>
                <fullName>Lojas de autopeças</fullName>
            </value>
            <value>
                <fullName>Farmcia</fullName>
            </value>
            <value>
                <fullName>Igreja</fullName>
            </value>
            <value>
                <fullName>Oficina Mecanica</fullName>
            </value>
            <value>
                <fullName>Galpão</fullName>
            </value>
            <value>
                <fullName>Fabrica</fullName>
            </value>
            <value>
                <fullName>Salão de beleza</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>