force-app/main/default/objects/Imoveis__c/validationRules/Valida_Tipos_Comerciais.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_Tipos_Comerciais</fullName>
    <active>true</active>
    <description>Esta regra valida o campo do tipo comercial</description>
    <errorConditionFormula>AND( 

  ISPICKVAL(Finalidade_do_Imovel__c, &apos;Comercial&apos;), 
  ISPICKVAL( Tipos_Comerciais__c, &apos;&apos;)  

)</errorConditionFormula>
    <errorDisplayField>Tipos_Comerciais__c</errorDisplayField>
    <errorMessage>Voce precisa escolhar um tipo comercial sempre que a finalidade for COMERCIAL</errorMessage>
</ValidationRule>