force-app/main/default/objects/Imoveis__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TipoImovel__c</columns>
    <columns>Banheiro__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>