force-app/main/default/objects/Imoveis__c/listViews/Mostra_Imoveis.listView-meta.xml
<ListView>
    <fullName>Mostra_Imoveis</fullName>
    <columns>NAME</columns>
    <columns>TipoImovel__c</columns>
    <filterScope>Mine</filterScope>
    <label>Mostra Imóveis</label>
</ListView>