force-app/main/default/objects/Imoveis__c/listViews/Mostrar_Imoveis.listView-meta.xml
<ListView>
    <fullName>Mostrar_Imoveis</fullName>
    <columns>NAME</columns>
    <columns>TipoImovel__c</columns>
    <filterScope>Mine</filterScope>
    <label>Mostrar Imoveis</label>
</ListView>