force-app/main/default/objects/Imoveis__c/listViews/Tipo_de_Imoveis.listView-meta.xml
<ListView>
    <fullName>Tipo_de_Imoveis</fullName>
    <columns>NAME</columns>
    <columns>TipoImovel__c</columns>
    <columns>Mobiliado__c</columns>
    <filterScope>Mine</filterScope>
    <label>Tipo de Imoveis</label>
</ListView>